Criação de estrutura base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#WEB
+server.port=8080
 
+#DOC
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+#DATABASE
+spring.datasource.url=jdbc:h2:mem:towerisedb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+
+#HIBERNATE CONFIG
+spring.jpa.defer-datasource-initialization=true # para o data.sql ser executado depois do hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.h2.console.enabled=true
